// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerLogo (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1td2x_1 _logoAsLink_1td2x_13"
     href="https://www.skatteetaten.no/"
  >
    <img class="_logo_1td2x_1"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithAs play-test 1`] = `
<div data-test-block="true">
  <div class="_logoContainer_1td2x_1">
    <img class="_logo_1td2x_1"
         alt="Skatteetaten logo"
         src="[REMOVED]"
    >
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <a id="htmlId"
     class="_logoContainer_1td2x_1 _logoAsLink_1td2x_13 dummyClassname"
     lang="en"
     data-testid="123ID"
     href="https://www.skatteetaten.no/"
  >
    <img class="_logo_1td2x_1"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithLogoMobileLogoAltAndHref play-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1td2x_1 _logoAsLink_1td2x_13"
     href="#"
  >
    <img class="_logo_1td2x_1"
         alt="custom alt text"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1td2x_1 _logoAsLink_1td2x_13"
     href="https://www.skatteetaten.no/"
     id="dummyIdForwardedFromRef"
  >
    <img class="_logo_1td2x_1"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;
